@@ -26,14 +26,23 @@ import ch.qos.logback.core.joran.spi.JoranException;
 import co.elastic.apm.agent.log.shader.LogShadingInstrumentationTest;
 import co.elastic.apm.agent.log.shader.LoggerFacade;
 import org.slf4j.MDC;
+import org.slf4j.Marker;
+import org.slf4j.MarkerFactory;
 
 import java.net.URL;
 
 public class LogbackShadingTest extends LogShadingInstrumentationTest {
 
+    private static final Marker TEST_MARKER = MarkerFactory.getMarker("TEST");
+
     @Override
     protected LoggerFacade createLoggerFacade() {
         return new LogbackLoggerFacade();
+    }
+
+    @Override
+    protected boolean markersSupported() {
+        return true;
     }
 
     @Override
@@ -85,6 +94,11 @@ public class LogbackShadingTest extends LogShadingInstrumentationTest {
         @Override
         public void debug(String message) {
             logbackLogger.debug(message);
+        }
+
+        @Override
+        public void debugWithMarker(String message) {
+            logbackLogger.debug(TEST_MARKER, message);
         }
 
         @Override
