@@ -14,7 +14,7 @@
 
     <properties>
         <apm-agent-parent.base.dir>${project.basedir}/../..</apm-agent-parent.base.dir>
-        <version.ecs.logging>1.0.1</version.ecs.logging>
+        <version.ecs.logging>1.1.0</version.ecs.logging>
     </properties>
 
     <modules>
