@@ -143,6 +143,7 @@ Click on a key to get more information.
 ** <<config-log-file>>
 ** <<config-enable-log-correlation>>
 ** <<config-log-ecs-reformatting>>
+** <<config-log-ecs-reformatting-additional-fields>>
 ** <<config-log-ecs-formatter-allow-list>>
 ** <<config-log-ecs-reformatting-dir>>
 ** <<config-log-file-size>>
@@ -1764,6 +1765,32 @@ Valid options: `OFF`, `SHADE`, `REPLACE`, `OVERRIDE`
 |============
 | Java System Properties      | Property file   | Environment
 | `elastic.apm.log_ecs_reformatting` | `log_ecs_reformatting` | `ELASTIC_APM_LOG_ECS_REFORMATTING`
+|============
+
+// This file is auto generated. Please make your changes in *Configuration.java (for example CoreConfiguration.java) and execute ConfigurationExporter
+[float]
+[[config-log-ecs-reformatting-additional-fields]]
+==== `log_ecs_reformatting_additional_fields` (added[1.26.0])
+
+A comma-separated list of key-value pairs that will be added as additional fields to all log events.
+ Takes the format `key=value[,key=value[,...]]`, for example: `key1=value1,key2=value2`.
+ Only relevant if <<config-log-ecs-reformatting,`log_ecs_reformatting`>> is set to any option other than `OFF`.
+
+
+
+
+
+[options="header"]
+|============
+| Default                          | Type                | Dynamic
+| `<none>` | Map | false
+|============
+
+
+[options="header"]
+|============
+| Java System Properties      | Property file   | Environment
+| `elastic.apm.log_ecs_reformatting_additional_fields` | `log_ecs_reformatting_additional_fields` | `ELASTIC_APM_LOG_ECS_REFORMATTING_ADDITIONAL_FIELDS`
 |============
 
 // This file is auto generated. Please make your changes in *Configuration.java (for example CoreConfiguration.java) and execute ConfigurationExporter
@@ -3494,6 +3521,17 @@ The default unit for this option is `ms`.
 # Default value: OFF
 #
 # log_ecs_reformatting=OFF
+
+# A comma-separated list of key-value pairs that will be added as additional fields to all log events.
+#  Takes the format `key=value[,key=value[,...]]`, for example: `key1=value1,key2=value2`.
+#  Only relevant if <<config-log-ecs-reformatting,`log_ecs_reformatting`>> is set to any option other than `OFF`.
+# 
+#
+# This setting can not be changed at runtime. Changes require a restart of the application.
+# Type: Map
+# Default value: 
+#
+# log_ecs_reformatting_additional_fields=
 
 # Only formatters that match an item on this list will be automatically reformatted to ECS when 
 # <<config-log-ecs-reformatting,`log_ecs_reformatting`>> is set to any option other than `OFF`. 
